# breeder3

./: README.md  meson.build  unj.dpbo.labgtk.json
.flatpak-builder/cache/refs/heads/x86_64-unj.dpbo.labgtk.json/: init
.flatpak-builder/checksums/: x86_64-unj.dpbo.labgtk.json
data/: meson.build  unj.dpbo.labgtk.desktop.in  unj.dpbo.labgtk.gschema.xml  unj.dpbo.labgtk.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: add_data.ui  add_data.vala  add_pond_page.ui  add_pond_page.vala  application.vala  content_window.ui  content_window.vala  dashboard.css  dashboard.ui  dashboard.vala  labgtk.gresource.xml  login_style.css  main.vala  meson.build  pond_detail_page.ui  pond_detail_page.vala  register_page.ui  register_page.vala  style.css  window.ui  window.vala
src/controllers/: add_pond_function.vala  apicall.vala  listponds_function.vala  login_function.vala  register_function.vala
src/document/: any.vala  content.vala  document.vala  error.vala  ioutil.vala  keymetadata.vala  main.vala  meson.build  metadata.vala  type.vala  util.vala
src/document/struct/: node.vala  nodes.vala
src/models/: pond.vala  user.vala
